book and media report content update Thu 10/14/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -77,6 +77,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1578523237l/26228034._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347404110l/87220.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1518820300l/34668831._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1518820327l/36063646._SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
