--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 10/13/2021 06:00<br>
+Reserved books sorted by folder - 10/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 140 books - 1756H 42M / 73D 4H 42M<br>
@@ -208,14 +208,15 @@ The Time Traveler's Almanac - A Time Travel Anthology - Jeff VanderMeer - 29H 53
 Tuf Voyaging - George R. R. Martin - 13H 56M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Manga : 1 books - 7H 58M / 0D 7H 58M<br>
-Total Comic Trades : 1<br>
+Book Reserve - Manga : 2 books - 12H 26M / 0D 12H 26M<br>
+Total Comic Trades : 2<br>
  <br>
 Attack on Titan 34 - 7H 58M<br>
+Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Comic Trades : 116 books - 727H 45M / 30D 7H 45M<br>
-Total Comic Trades : 116<br>
+Book Reserve - Comic Trades : 117 books - 737H 27M / 30D 17H 27M<br>
+Total Comic Trades : 117<br>
  <br>
 Absolute Carnage - 6H 13M<br>
 Action Comics 1000 - 4H 58M<br>
@@ -234,6 +235,7 @@ Batman Damned - 5H 28M<br>
 Batman Eternal vol 1 - 14H 56M<br>
 Batman Eternal vol 2 - 13H 56M<br>
 Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Batman Knightfall Vol. 1 - 8H 43M<br>
 Batman Last Knight on Earth - 5H 43M<br>
 Batman Li'l Gotham Vol. 1 - 8H 28M<br>
 Batman The Doom That Came To Gotham - 5H 28M<br>
@@ -260,6 +262,7 @@ Despicable Deadpool vol 2 - 3H 29M<br>
 Despicable Deadpool vol 3 - 3H 29M<br>
 Detective Comics 1000 - 5H 28M<br>
 Edge of Spider-geddon - 3H 44M<br>
+Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
 Fantastic Four vol 1 - 4H 28M<br>
 Future State Wonder Woman - 6H 13M<br>
 Green Lanterns vol 2 - 6H 28M<br>
@@ -327,7 +330,6 @@ Umbrella Academy vol 1 - 5H 43M<br>
 Umbrella Academy vol 2 - 5H 58M<br>
 Uncanny X-force vol 1 - 16H 11M<br>
 Uncanny X-force vol 2 - 12H 42M<br>
-Venomverse - 3H 59M<br>
 War Machine - Volume 1 Iron Heart - 4H 14M<br>
 White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
 Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
@@ -363,7 +365,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 496 books - 6595H 3M / 274D 19H 3M<br>
+Book Reserve - Audiobooks : 497 books - 6600H 6M / 275D 0H 6M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 112263 - Stephen King - 30H 46M<br>
@@ -537,6 +539,7 @@ HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M<br>
 HTTYD 06 - A Hero's Guide to Deadly Dragons  - Cressida Cowell - 2H 41M<br>
 HTTYD 07 - How to Ride a Dragon's Storm  - Cressida Cowell - 3H 49M<br>
 HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M<br>
+HTTYD 09 - How to Steal a Dragon's Sword  - Cressida Cowell - 5H 2M<br>
 HTTYD 10 - How to Seize a Dragon's Jewel  - Cressida Cowell - 5H 32M<br>
 HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M<br>
 I Am Legend and Other Stories - Richard Matheson - 10H 54M<br>
@@ -868,7 +871,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
+Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -878,10 +881,10 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
+Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 496 books - 6595H 3M / 274D 19H 3M<br>
+Book Reserve - Audiobooks - 497 books - 6600H 6M / 275D 0H 6M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -889,20 +892,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2240H 30M / 93D 8H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.7% of reserve items are queued<br>
  <br>
-All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1230 titles - 14574H 37M / 607D 6H 37M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
-Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
-Average completed per year: 45.9 titles - 504H 51M / 21D 0H 51M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
+Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
+Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
+Average completed per year: 46.0 titles - 505H 9M / 21D 1H 9M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.607 (1.607 seconds)<br>
-Total time including file writes: 00:00:01.607 (1.607 seconds)
+Total time to process all reports: 00:00:01.894 (1.894 seconds)<br>
+Total time including file writes: 00:00:01.894 (1.894 seconds)
 </div>
 </body>
 </html>
