--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 10/13/2021 06:00<br>
+Reserved books sorted by length - 10/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-823 books<br>
+826 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -54,7 +54,7 @@ Transformers More Than Meets The Eye Volume 2 - 3H 51M (Book Reserve - Comic Tra
 HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M (Book Reserve - Audiobooks)<br>
 Mary Poppins - P. L. Travers - 3H 51M (Book Reserve - Audiobooks)<br>
 The Return of Sherlock Holmes, Volume 2 - Sir Arthur Conan Doyle - 3H 53M (Book Reserve - Audiobooks)<br>
-Venomverse - 3H 59M (Book Reserve - Comic Trades)<br>
+Super Sons vol 1 - 3H 59M (Book Reserve - Comic Trades)<br>
 Thor Vol 1 The Goddess of Thunder - 4H 4M (Book Reserve - Comic Trades)<br>
 Lumberjanes - 4H 6M (Book Reserve - Comic Trades)<br>
 Siddhartha - Hermann Hesse - 4H 11M (Queue - Current Audiobooks)<br>
@@ -77,6 +77,7 @@ Man's Search for Meaning - Viktor E. Frankl - 4H 46M (Queue - Current Audiobooks
 The Fall of the House of Usher and other tales - Edgar Allan Poe - 4H 53M (Book Reserve - Audiobooks)<br>
 Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M (Book Reserve - Comic Trades)<br>
 White Sand vol 2 - Brandon Sanderson - 4H 58M (Book Reserve - Comic Trades)<br>
+HTTYD 09 - How to Steal a Dragon's Sword  - Cressida Cowell - 5H 2M (Book Reserve - Audiobooks)<br>
 Notorious RBG - Irin Carmon - 5H 11M (Book Reserve - Audiobooks)<br>
 Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M (Book Reserve - Comic Trades)<br>
 The Stainless Steel Rat - Harry Harrison - 5H 14M (Book Reserve - Audiobooks (Need new source))<br>
@@ -751,7 +752,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
+Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -761,10 +762,10 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
+Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 496 books - 6595H 3M / 274D 19H 3M<br>
+Book Reserve - Audiobooks - 497 books - 6600H 6M / 275D 0H 6M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -772,20 +773,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2240H 30M / 93D 8H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.7% of reserve items are queued<br>
  <br>
-All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1230 titles - 14574H 37M / 607D 6H 37M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
-Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
-Average completed per year: 45.9 titles - 504H 51M / 21D 0H 51M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
+Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
+Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
+Average completed per year: 46.0 titles - 505H 9M / 21D 1H 9M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.607 (1.607 seconds)<br>
-Total time including file writes: 00:00:01.607 (1.607 seconds)
+Total time to process all reports: 00:00:01.894 (1.894 seconds)<br>
+Total time including file writes: 00:00:01.894 (1.894 seconds)
 </div>
 </body>
 </html>
