--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,127 +7,128 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 10/13/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 10/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-116 books<br>
+117 books<br>
  <br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
-Darth Vader vol 3 - 3H 59M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Batman Li'l Gotham Vol. 1 - 8H 28M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
-Lumberjanes - 4H 6M<br>
-Black Panther vol 1 - 4H 28M<br>
-Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-Invincible Iron Man vol 1 - 4H 14M<br>
-Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
-Black Panther vol 2 - 4H 28M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-Venomverse - 3H 59M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Fantastic Four vol 1 - 4H 28M<br>
-Superman vol 4 - 5H 28M<br>
-Batman Last Knight on Earth - 5H 43M<br>
-Batwoman vol 1 - 5H 13M<br>
-Green Lanterns vol 2 - 6H 28M<br>
-Detective Comics 1000 - 5H 28M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Saga vol 6 - 4H 43M<br>
-Spider-man Spider Island - 11H 42M<br>
-Batman vol 9 - 4H 43M<br>
-Mister Miracle - 9H 57M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
-Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Justice League Darkseid War - 11H 42M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
 The Weatherman Volume 1 - 6H 13M<br>
-Batman Eternal vol 2 - 13H 56M<br>
-Lobo Portrait of a Bastich - 6H 28M<br>
-Batman Damned - 5H 28M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
+Avengers vol 1 - 4H 58M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Black Panther vol 1 - 4H 28M<br>
+Deadpool v Gambit - 3H 29M<br>
+Once & Future Vol. 1 - 4H 58M<br>
 Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
+Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Saga vol 6 - 4H 43M<br>
+Super Sons vol 1 - 3H 59M<br>
+Future State Wonder Woman - 6H 13M<br>
+Saga vol 3 - 4H 28M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+Civil War II - 9H 12M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
 Batman vol 8 - 5H 28M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
-Spider-gwen vol 3 - 3H 29M<br>
-Iron Man Extremis - 4H 58M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+Lobo Portrait of a Bastich - 6H 28M<br>
+Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
+Eternals Vol. 1 Only Death is Eternal - 4H 58M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
+Spider-geddon - 6H 13M<br>
+Deadpool too soon - 4H 14M<br>
+Pride of Baghdad - 4H 14M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Black Panther vol 2 - 4H 28M<br>
+Superman vol 4 - 5H 28M<br>
+Detective Comics 1000 - 5H 28M<br>
 Green Lanterns vol 3 - 5H 13M<br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+Thanos vol 1 - 4H 14M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
+Lumberjanes - 4H 6M<br>
+Deadpool v Carnage - 3H 44M<br>
+Batman 66 vol 3 - 5H 13M<br>
+Marvel Infinity - 18H 25M<br>
+Batwoman vol 1 - 5H 13M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+Batman vol 9 - 4H 43M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+Spider-Verse - 20H 10M<br>
+Superman vol 3 - 4H 28M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
+Thor God of Thunder Reborn vol 1 - 4H 14M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+Absolute Carnage - 6H 13M<br>
+Saga vol 4 - 4H 28M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Green Lanterns vol 4 - 3H 59M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
+Transformers All Hail Megatron Volume 1 - 4H 43M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
+Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
+Spider-man Spider Island - 11H 42M<br>
 Batman The Doom That Came To Gotham - 5H 28M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
+Iron Man Extremis - 4H 58M<br>
+Batman Eternal vol 2 - 13H 56M<br>
+Red Hood and the Outlaws vol 1 - 5H 13M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
+Invincible Iron Man vol 1 - 4H 14M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
+Batman Damned - 5H 28M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Darth Vader vol 3 - 3H 59M<br>
+Mister Miracle - 9H 57M<br>
+Batman Knightfall Vol. 1 - 8H 43M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
 War Machine - Volume 1 Iron Heart - 4H 14M<br>
 White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Spider-geddon - 6H 13M<br>
-Green Lanterns vol 4 - 3H 59M<br>
 Infamous Iron Man vol 2 - 4H 14M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Marvel Infinity - 18H 25M<br>
-Red Hood and the Outlaws vol 1 - 5H 13M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-Transformers All Hail Megatron Volume 1 - 4H 43M<br>
-Deadpool too soon - 4H 14M<br>
-Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-The Dark Knight Returns - 6H 58M<br>
-Pride of Baghdad - 4H 14M<br>
-Batman 66 vol 3 - 5H 13M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Justice League Dark Vol. 1 The Last Age of Magic - 4H 58M<br>
-Once & Future Vol. 1 - 4H 58M<br>
-Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-Saga vol 3 - 4H 28M<br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-Thor God of Thunder Reborn vol 1 - 4H 14M<br>
-Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Civil War II - 9H 12M<br>
-X-men Gold vol 1 - 4H 28M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
-Batman Arkham Asylum - 7H 13M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
-Spider-gwen vol 2 - 3H 29M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
-Avengers vol 1 - 4H 58M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
-Darth Vader vol 4 - 5H 13M<br>
-Super Sons vol 1 - 3H 59M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-Saga vol 5 - 4H 43M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Future State Wonder Woman - 6H 13M<br>
-DCeased - 6H 58M<br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Saga vol 4 - 4H 28M<br>
-Edge of Spider-geddon - 3H 44M<br>
-Absolute Carnage - 6H 13M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Deadpool v Gambit - 3H 29M<br>
-Deadpool v Carnage - 3H 44M<br>
-Batman 66 vol 2 - 5H 28M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-Action Comics 1000 - 4H 58M<br>
-Superman vol 3 - 4H 28M<br>
-Thanos vol 1 - 4H 14M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-Spider-Verse - 20H 10M<br>
 Despicable Deadpool vol 3 - 3H 29M<br>
+Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
+X-men Gold vol 1 - 4H 28M<br>
+Suicide Squad vol 5 - 6H 28M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Justice League Darkseid War - 11H 42M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
+Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
+Saga vol 5 - 4H 43M<br>
+Batman Li'l Gotham Vol. 1 - 8H 28M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+The Dark Knight Returns - 6H 58M<br>
+Action Comics 1000 - 4H 58M<br>
+Spider-gwen vol 2 - 3H 29M<br>
+Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+DCeased - 6H 58M<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Swamp Thing Bronze Age vol 1 - 9H 27M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Darth Vader vol 4 - 5H 13M<br>
+Edge of Spider-geddon - 3H 44M<br>
+Spider-gwen vol 3 - 3H 29M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
@@ -135,7 +136,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
+Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -145,10 +146,10 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
+Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 496 books - 6595H 3M / 274D 19H 3M<br>
+Book Reserve - Audiobooks - 497 books - 6600H 6M / 275D 0H 6M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -156,20 +157,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2240H 30M / 93D 8H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.7% of reserve items are queued<br>
  <br>
-All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1230 titles - 14574H 37M / 607D 6H 37M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
-Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
-Average completed per year: 45.9 titles - 504H 51M / 21D 0H 51M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
+Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
+Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
+Average completed per year: 46.0 titles - 505H 9M / 21D 1H 9M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.607 (1.607 seconds)<br>
-Total time including file writes: 00:00:01.607 (1.607 seconds)
+Total time to process all reports: 00:00:01.894 (1.894 seconds)<br>
+Total time including file writes: 00:00:01.894 (1.894 seconds)
 </div>
 </body>
 </html>
