--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 10/13/2021 06:00<br>
+Completed books sorted by name - 10/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-403 books<br>
+404 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -404,6 +404,7 @@ Thrawn Trilogy 3 - The Last Command - Timothy Zahn - 15H 51M (Completed in 2014)
 Trigger Warning - Neil Gaiman - 11H 4M (Completed in 2016)<br>
 Undeniable - Bill Nye - 9H 32M (Completed in 2017)<br>
 Utopia for Realists - Rutger Bregman - 6H 36M (Completed in 2019)<br>
+Venomverse - 3H 59M (Completed in 2021)<br>
 VocabuLearn German Complete - 9H 2M (Completed in 2021)<br>
 Vote Loki - 3H 44M (Completed in 2021)<br>
 Warbreaker - Brandon Sanderson - 25H 18M (Completed in 2019)<br>
@@ -422,7 +423,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
+Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -432,10 +433,10 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
+Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 496 books - 6595H 3M / 274D 19H 3M<br>
+Book Reserve - Audiobooks - 497 books - 6600H 6M / 275D 0H 6M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -443,20 +444,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2240H 30M / 93D 8H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.7% of reserve items are queued<br>
  <br>
-All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1230 titles - 14574H 37M / 607D 6H 37M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
-Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
-Average completed per year: 45.9 titles - 504H 51M / 21D 0H 51M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
+Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
+Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
+Average completed per year: 46.0 titles - 505H 9M / 21D 1H 9M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.607 (1.607 seconds)<br>
-Total time including file writes: 00:00:01.607 (1.607 seconds)
+Total time to process all reports: 00:00:01.894 (1.894 seconds)<br>
+Total time including file writes: 00:00:01.894 (1.894 seconds)
 </div>
 </body>
 </html>
