--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 10/13/2021 06:00<br>
+Reserved books sorted by name - 10/14/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-823 books<br>
+826 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -87,6 +87,7 @@ Batman Damned - 5H 28M (Book Reserve - Comic Trades)<br>
 Batman Eternal vol 1 - 14H 56M (Book Reserve - Comic Trades)<br>
 Batman Eternal vol 2 - 13H 56M (Book Reserve - Comic Trades)<br>
 Batman Gotham by Gaslight (Elseworlds) - 3H 29M (Book Reserve - Comic Trades)<br>
+Batman Knightfall Vol. 1 - 8H 43M (Book Reserve - Comic Trades)<br>
 Batman Last Knight on Earth - 5H 43M (Book Reserve - Comic Trades)<br>
 Batman Li'l Gotham Vol. 1 - 8H 28M (Book Reserve - Comic Trades)<br>
 Batman The Doom That Came To Gotham - 5H 28M (Book Reserve - Comic Trades)<br>
@@ -220,6 +221,7 @@ Embassytown - China Mieville - 12H 26M (Book Reserve - Audiobooks)<br>
 Emotional Intelligence - Prof. Daniel Goleman, Ph.D - 13H 35M (Queue - Current Audiobooks)<br>
 Eon - Greg Bear - 17H 4M (Queue - Audible Audiobooks)<br>
 Eragon - Christopher Paolini - 16H 27M (Book Reserve - Audiobooks)<br>
+Eternals Vol. 1 Only Death is Eternal - 4H 58M (Book Reserve - Comic Trades)<br>
 Everything All at Once - How to Think Like a Science Guy, Solve Any Problem, and Make a Better World - Bill Nye - 11H 57M (Book Reserve - Physical and Kindle Books)<br>
 Evil Geniuses - The Unmaking of America - Kurt Andersen - 16H 29M (Book Reserve - Audiobooks)<br>
 Expeditionary Force 1 - Columbus Day - Craig Alanson - 16H 23M (Queue - Audible Audiobooks)<br>
@@ -275,6 +277,7 @@ HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M (Book Reserve
 HTTYD 06 - A Hero's Guide to Deadly Dragons  - Cressida Cowell - 2H 41M (Book Reserve - Audiobooks)<br>
 HTTYD 07 - How to Ride a Dragon's Storm  - Cressida Cowell - 3H 49M (Book Reserve - Audiobooks)<br>
 HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M (Book Reserve - Audiobooks)<br>
+HTTYD 09 - How to Steal a Dragon's Sword  - Cressida Cowell - 5H 2M (Book Reserve - Audiobooks)<br>
 HTTYD 10 - How to Seize a Dragon's Jewel  - Cressida Cowell - 5H 32M (Book Reserve - Audiobooks)<br>
 HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M (Book Reserve - Audiobooks)<br>
 Hainish Cycle 1 - The Dispossessed - Ursula K. Le Guin - 13H 29M (Book Reserve - Audiobooks)<br>
@@ -526,6 +529,7 @@ Stamped (For Kids) - Ibram X. Kendi - 2H 23M (Queue - Current Audiobooks)<br>
 Stamped from the Beginning - Ibram X. Kendi - 19H 13M (Book Reserve - Audiobooks)<br>
 Stand on Zanzibar - John Brunner - 21H 22M (Queue - Current Audiobooks)<br>
 Star Wars Skywalker Strikes vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
+Star Wars The High Republic Edge of Balance, Vol. 1 - 4H 28M (Book Reserve - Manga)<br>
 Star Wars the High Republic - The Rising Storm - Cavan Scott - 15H 36M (Queue - Current Audiobooks)<br>
 Stardust - Neil Gaiman - 6H 25M (Book Reserve - Audiobooks)<br>
 Still Standing - Governor Larry Hogan - 10H 21M (Book Reserve - Audiobooks)<br>
@@ -786,7 +790,6 @@ Uplift 2 - Startide Rising - David Brin - 17H 31M (Book Reserve - Audiobooks (Ne
 Uplift 3 - The Uplift War - David Brin - 27H 59M (Book Reserve - Audiobooks (Need new source))<br>
 Uprooted - Naomi Novik - 17H 49M (Book Reserve - Audiobooks)<br>
 VALIS - Philip K Dick - 8H 44M (Book Reserve - Audiobooks (Need new source))<br>
-Venomverse - 3H 59M (Book Reserve - Comic Trades)<br>
 Venus Plus X - Theodore Sturgeon - 6H 28M (Book Reserve - Audiobooks)<br>
 Walden - Henry David Thoreau - 12H 30M (Book Reserve - Audiobooks)<br>
 War Machine - Volume 1 Iron Heart - 4H 14M (Book Reserve - Comic Trades)<br>
@@ -842,7 +845,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 70 books - 654H 59M / 27D 6H 59M<br>
+Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -852,10 +855,10 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 116 books - 727H 45M / 30D 7H 45M<br>
+Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 496 books - 6595H 3M / 274D 19H 3M<br>
+Book Reserve - Audiobooks - 497 books - 6600H 6M / 275D 0H 6M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -863,20 +866,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2240H 30M / 93D 8H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.78% of reserve items are queued<br>
+20.7% of reserve items are queued<br>
  <br>
-All books included in this report: 1226 titles - 14551H 25M / 606D 7H 25M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1230 titles - 14574H 37M / 607D 6H 37M<br>
+Records not found in the lookup file: 4<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 403 titles - 4432H 47M / 184D 16H 47M<br>
-Total remaining in queue and reserve: 823 titles - 10118H 37M / 421D 14H 37M<br>
-Average completed per year: 45.9 titles - 504H 51M / 21D 0H 51M<br>
-Remaining years of reserve material at average yearly pace: 17.9<br>
+Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
+Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
+Average completed per year: 46.0 titles - 505H 9M / 21D 1H 9M<br>
+Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.607 (1.607 seconds)<br>
-Total time including file writes: 00:00:01.607 (1.607 seconds)
+Total time to process all reports: 00:00:01.894 (1.894 seconds)<br>
+Total time including file writes: 00:00:01.894 (1.894 seconds)
 </div>
 </body>
 </html>
