--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 10/14/2021 06:00<br>
+Completed books sorted by name - 10/15/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 404 books<br>
@@ -447,17 +447,17 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
 20.7% of reserve items are queued<br>
  <br>
 All books included in this report: 1230 titles - 14574H 37M / 607D 6H 37M<br>
-Records not found in the lookup file: 4<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
 Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
-Average completed per year: 46.0 titles - 505H 9M / 21D 1H 9M<br>
+Average completed per year: 46.0 titles - 504H 59M / 21D 0H 59M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
 Remaining years of reserve material at current year pace: 9.2<br>
  <br>
-Total time to process all reports: 00:00:01.894 (1.894 seconds)<br>
-Total time including file writes: 00:00:01.894 (1.894 seconds)
+Total time to process all reports: 00:00:01..67 (1.67 seconds)<br>
+Total time including file writes: 00:00:01..67 (1.67 seconds)
 </div>
 </body>
 </html>
