--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 10/15/2021 06:00<br>
+Completed books sorted by folder - 10/16/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 71 books - 658H 58M / 27D 10H 58M<br>
 Total Comic Trades : 29<br>
 Average book length : 9H 16M<br>
-Hours read per week : 16H 0M<br>
-On pace to complete 90 books (835H 42M / 34D 19H 42M) by the end of 2021<br>
+Hours read per week : 15H 57M<br>
+On pace to complete 89 books (832H 46M / 34D 16H 46M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -505,12 +505,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
 Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
-Average completed per year: 46.0 titles - 504H 59M / 21D 0H 59M<br>
+Average completed per year: 46.0 titles - 504H 50M / 21D 0H 50M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.2<br>
+Remaining years of reserve material at current year pace: 9.3<br>
  <br>
-Total time to process all reports: 00:00:01..67 (1.67 seconds)<br>
-Total time including file writes: 00:00:01..67 (1.67 seconds)
+Total time to process all reports: 00:00:01.682 (1.682 seconds)<br>
+Total time including file writes: 00:00:01.682 (1.682 seconds)
 </div>
 </body>
 </html>
