--- a/report/books/Reserved_books_sorted_by_name.html
+++ b/report/books/Reserved_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by name - 10/18/2021 06:00<br>
+Reserved books sorted by name - 10/19/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-826 books<br>
+827 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Book Reserve - Audiobooks)<br>
@@ -280,6 +280,7 @@ HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M (Book Reserv
 HTTYD 09 - How to Steal a Dragon's Sword  - Cressida Cowell - 5H 2M (Book Reserve - Audiobooks)<br>
 HTTYD 10 - How to Seize a Dragon's Jewel  - Cressida Cowell - 5H 32M (Book Reserve - Audiobooks)<br>
 HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M (Book Reserve - Audiobooks)<br>
+HTTYD 12 - How to Fight a Dragon's Fury - Cressida Cowell - 7H 7M (Book Reserve - Audiobooks)<br>
 Hainish Cycle 1 - The Dispossessed - Ursula K. Le Guin - 13H 29M (Book Reserve - Audiobooks)<br>
 Hainish Cycle 5 - City of Illusions - Ursula K. Le Guin - 7H 24M (Book Reserve - Audiobooks)<br>
 Hallucinations - Oliver Sacks - 9H 52M (Queue - Current Audiobooks)<br>
@@ -858,7 +859,7 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
 Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 497 books - 6600H 6M / 275D 0H 6M<br>
+Book Reserve - Audiobooks - 498 books - 6607H 13M / 275D 7H 13M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -866,20 +867,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 171 queued items: 2240H 30M / 93D 8H 30M<br>
 0 reserve titles are marked as high priority<br>
-20.7% of reserve items are queued<br>
+20.68% of reserve items are queued<br>
  <br>
-All books included in this report: 1230 titles - 14574H 37M / 607D 6H 37M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1231 titles - 14581H 44M / 607D 13H 44M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
-Total remaining in queue and reserve: 826 titles - 10137H 50M / 422D 9H 50M<br>
-Average completed per year: 45.9 titles - 504H 31M / 21D 0H 31M<br>
+Total remaining in queue and reserve: 827 titles - 10144H 57M / 422D 16H 57M<br>
+Average completed per year: 45.9 titles - 504H 22M / 21D 0H 22M<br>
 Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.3<br>
+Remaining years of reserve material at current year pace: 9.4<br>
  <br>
-Total time to process all reports: 00:00:01.608 (1.608 seconds)<br>
-Total time including file writes: 00:00:01.608 (1.608 seconds)
+Total time to process all reports: 00:00:01.818 (1.818 seconds)<br>
+Total time including file writes: 00:00:01.818 (1.818 seconds)
 </div>
 </body>
 </html>
