book and media report content update Wed 10/20/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -78,6 +78,9 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1347404110l/87220.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1518820300l/34668831._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1518820327l/36063646._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1630471264l/37741._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1473396980l/2612._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1622406464l/56304131._SX318_.jpg" width="300" >
 </div>
 </body>
 </html>
