--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 10/19/2021 06:00<br>
+Completed books sorted by folder - 10/20/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 71 books - 658H 58M / 27D 10H 58M<br>
-Total Comic Trades : 29<br>
-Average book length : 9H 16M<br>
-Hours read per week : 15H 47M<br>
-On pace to complete 88 books (824H 14M / 34D 8H 14M) by the end of 2021<br>
+Completed in 2021 : 74 books - 678H 7M / 28D 6H 7M<br>
+Total Comic Trades : 30<br>
+Average book length : 9H 9M<br>
+Hours read per week : 16H 11M<br>
+On pace to complete 92 books (845H 14M / 35D 5H 14M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -25,6 +25,7 @@ Attack on Titan 30 - 5H 58M<br>
 Attack on Titan 31 - 5H 58M<br>
 Attack on Titan 32 - 5H 58M<br>
 Attack on Titan 33 - 5H 58M<br>
+Attack on Titan 34 - 7H 58M<br>
 Avengers Vol. 7 The Age of Khonshu - 5H 43M<br>
 Batman Fortnite Zero Point - 4H 43M<br>
 Batman White Knight - 7H 13M<br>
@@ -71,6 +72,7 @@ Star Wars the High Republic - A Test of Courage - Justina Ireland - 4H 35M<br>
 Star Wars the High Republic - Into the Dark - Claudia Gray - 11H 14M<br>
 Star Wars the High Republic - Light of the Jedi - Charles Soule - 13H 38M<br>
 Superfreakonomics - Steven D. Levitt - 7H 30M<br>
+Tales of a Fourth Grade Nothing - Judy Blume - 2H 34M<br>
 Talking to Strangers - Malcolm Gladwell - 8H 45M<br>
 Teen Titans Raven - 5H 58M<br>
 The 7 Habits of Highly Effective People - Stephen R. Covey - 13H 8M<br>
@@ -82,6 +84,7 @@ The Power of Showing Up - Daniel J. Siegel - 7H 29M<br>
 The Righteous Mind - Why Good People Are Divided by Politics and Religion - Jonathan Haidt - 11H 4M<br>
 The Signal and the Noise - Nate Silver - 15H 47M<br>
 The Teenage Brain - A Neuroscientist's Survival Guide to Raising Adolescents and Young Adults - Frances E. Jensen - 9H 4M<br>
+The Tipping Point - Malcolm Gladwell - 8H 36M<br>
 Venomverse - 3H 59M<br>
 VocabuLearn German Complete - 9H 2M<br>
 Vote Loki - 3H 44M<br>
@@ -474,9 +477,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
+Queue - Current Audiobooks - 138 books - 1745H 32M / 72D 17H 32M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
+Completed in 2021 - 74 books - 678H 7M / 28D 6H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -486,7 +489,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 498 books - 6607H 13M / 275D 7H 13M<br>
@@ -495,22 +498,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2240H 30M / 93D 8H 30M<br>
+169 queued items: 2229H 20M / 92D 21H 20M<br>
 0 reserve titles are marked as high priority<br>
-20.68% of reserve items are queued<br>
+20.51% of reserve items are queued<br>
  <br>
 All books included in this report: 1231 titles - 14581H 44M / 607D 13H 44M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
-Total remaining in queue and reserve: 827 titles - 10144H 57M / 422D 16H 57M<br>
-Average completed per year: 45.9 titles - 504H 22M / 21D 0H 22M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total completed since 01/01/2013: 407 titles - 4455H 55M / 185D 15H 55M<br>
+Total remaining in queue and reserve: 824 titles - 10125H 48M / 421D 21H 48M<br>
+Average completed per year: 46.3 titles - 506H 23M / 21D 2H 23M<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
+Remaining years of reserve material at current year pace: 9.0<br>
  <br>
-Total time to process all reports: 00:00:01.818 (1.818 seconds)<br>
-Total time including file writes: 00:00:01.818 (1.818 seconds)
+Total time to process all reports: 00:00:01.635 (1.635 seconds)<br>
+Total time including file writes: 00:00:01.635 (1.635 seconds)
 </div>
 </body>
 </html>
