--- a/report/books/Completed_books_sorted_by_length.html
+++ b/report/books/Completed_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by length - 10/19/2021 06:00<br>
+Completed books sorted by length - 10/20/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-404 books<br>
+407 books<br>
  <br>
 Shadow War of the Night Dragons 1 -The Dead City - Prologue - John Scalzi - 0H 21M (Completed in 2014)<br>
 Gratitude - Oliver Sacks - 0H 36M (Completed in 2020)<br>
@@ -37,6 +37,7 @@ Expanse Novella 0.5 - The Churn - James S. A. Corey - 2H 30M (Completed in 2019)
 Expanse Novella 6.5 - Strange Dogs - James S. A. Corey - 2H 30M (Completed in 2021)<br>
 Binti - Nnedi Okorafor - 2H 31M (Completed in 2018)<br>
 The Princess Bride - William Goldman - 2H 33M (Completed in 2018)<br>
+Tales of a Fourth Grade Nothing - Judy Blume - 2H 34M (Completed in 2021)<br>
 Expanse Novella 2.5 - Gods of Risk - James S. A. Corey - 2H 35M (Completed in 2020)<br>
 The Colour Out of Space - H. P. Lovecraft - 2H 41M (Completed in 2019)<br>
 Dark Worlds of H. P. Lovecraft, Volume Four - 2H 41M (Completed in 2018)<br>
@@ -177,6 +178,7 @@ The Man in the High Castle - Philip K Dick - 8H 26M (Completed in 2015)<br>
 Discworld 35 - Wintersmith - 8H 34M (Completed in 2019)<br>
 A Blink of the Screen - Terry Pratchett - 8H 34M (Completed in 2018)<br>
 HP 1 - Harry Potter and the Sorcerer's Stone - J.K. Rowling - 8H 35M (Completed in 2020)<br>
+The Tipping Point - Malcolm Gladwell - 8H 36M (Completed in 2021)<br>
 Foundation 1 - Foundation - 8H 41M (Completed in 2013)<br>
 Talking to Strangers - Malcolm Gladwell - 8H 45M (Completed in 2021)<br>
 Discworld 32 - A Hat Full of Sky - 8H 47M (Completed in 2016)<br>
@@ -392,9 +394,9 @@ Stormlight Archive 4 - Rhythm of War - Brandon Sanderson - 57H 41M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
+Queue - Current Audiobooks - 138 books - 1745H 32M / 72D 17H 32M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
+Completed in 2021 - 74 books - 678H 7M / 28D 6H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -404,7 +406,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 498 books - 6607H 13M / 275D 7H 13M<br>
@@ -413,22 +415,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2240H 30M / 93D 8H 30M<br>
+169 queued items: 2229H 20M / 92D 21H 20M<br>
 0 reserve titles are marked as high priority<br>
-20.68% of reserve items are queued<br>
+20.51% of reserve items are queued<br>
  <br>
 All books included in this report: 1231 titles - 14581H 44M / 607D 13H 44M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
-Total remaining in queue and reserve: 827 titles - 10144H 57M / 422D 16H 57M<br>
-Average completed per year: 45.9 titles - 504H 22M / 21D 0H 22M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total completed since 01/01/2013: 407 titles - 4455H 55M / 185D 15H 55M<br>
+Total remaining in queue and reserve: 824 titles - 10125H 48M / 421D 21H 48M<br>
+Average completed per year: 46.3 titles - 506H 23M / 21D 2H 23M<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
+Remaining years of reserve material at current year pace: 9.0<br>
  <br>
-Total time to process all reports: 00:00:01.818 (1.818 seconds)<br>
-Total time including file writes: 00:00:01.818 (1.818 seconds)
+Total time to process all reports: 00:00:01.635 (1.635 seconds)<br>
+Total time including file writes: 00:00:01.635 (1.635 seconds)
 </div>
 </body>
 </html>
