--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 10/19/2021 06:00<br>
+Completed books sorted by name - 10/20/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-404 books<br>
+407 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -50,6 +50,7 @@ Attack on Titan 30 - 5H 58M (Completed in 2021)<br>
 Attack on Titan 31 - 5H 58M (Completed in 2021)<br>
 Attack on Titan 32 - 5H 58M (Completed in 2021)<br>
 Attack on Titan 33 - 5H 58M (Completed in 2021)<br>
+Attack on Titan 34 - 7H 58M (Completed in 2021)<br>
 Avengers Vol. 7 The Age of Khonshu - 5H 43M (Completed in 2021)<br>
 Batgirl Year One - 7H 28M (Completed in 2020)<br>
 Batman Fortnite Zero Point - 4H 43M (Completed in 2021)<br>
@@ -329,6 +330,7 @@ Summer Frost - Blake Crouch - 2H 19M (Completed in 2020)<br>
 Superfreakonomics - Steven D. Levitt - 7H 30M (Completed in 2021)<br>
 Surely You're Joking, Mr. Feynman! - Richard P. Feynman - 11H 35M (Completed in 2019)<br>
 Takeshi Kovacs 1 - Altered Carbon - Richard Morgan - 17H 13M (Completed in 2013)<br>
+Tales of a Fourth Grade Nothing - Judy Blume - 2H 34M (Completed in 2021)<br>
 Talking to Strangers - Malcolm Gladwell - 8H 45M (Completed in 2021)<br>
 Teen Titans Raven - 5H 58M (Completed in 2021)<br>
 The 7 Habits of Highly Effective People - Stephen R. Covey - 13H 8M (Completed in 2021)<br>
@@ -394,6 +396,7 @@ The Subtle Art of Not Giving a Fck - Mark Manson - 5H 18M (Completed in 2020)<br
 The Teenage Brain - A Neuroscientist's Survival Guide to Raising Adolescents and Young Adults - Frances E. Jensen - 9H 4M (Completed in 2021)<br>
 The Theory of Everything - Stephen Hawking - 3H 30M (Completed in 2013)<br>
 The Time Machine - H G Wells - 3H 56M (Completed in 2017)<br>
+The Tipping Point - Malcolm Gladwell - 8H 36M (Completed in 2021)<br>
 The Unbeatable Squirrel Girl Vol. 1 Squirrel Power - 3H 59M (Completed in 2020)<br>
 The Wonderful Wizard of Oz - L. Frank Baum - 3H 59M (Completed in 2018)<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M (Completed in 2020)<br>
@@ -421,9 +424,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 140 books - 1756H 42M / 73D 4H 42M<br>
+Queue - Current Audiobooks - 138 books - 1745H 32M / 72D 17H 32M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 71 books - 658H 58M / 27D 10H 58M<br>
+Completed in 2021 - 74 books - 678H 7M / 28D 6H 7M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -433,7 +436,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 2 books - 12H 26M / 0D 12H 26M<br>
+Book Reserve - Manga - 1 books - 4H 28M / 0D 4H 28M<br>
 Book Reserve - Comic Trades - 117 books - 737H 27M / 30D 17H 27M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 498 books - 6607H 13M / 275D 7H 13M<br>
@@ -442,22 +445,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-171 queued items: 2240H 30M / 93D 8H 30M<br>
+169 queued items: 2229H 20M / 92D 21H 20M<br>
 0 reserve titles are marked as high priority<br>
-20.68% of reserve items are queued<br>
+20.51% of reserve items are queued<br>
  <br>
 All books included in this report: 1231 titles - 14581H 44M / 607D 13H 44M<br>
-Records not found in the lookup file: 1<br>
+Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 404 titles - 4436H 46M / 184D 20H 46M<br>
-Total remaining in queue and reserve: 827 titles - 10144H 57M / 422D 16H 57M<br>
-Average completed per year: 45.9 titles - 504H 22M / 21D 0H 22M<br>
-Remaining years of reserve material at average yearly pace: 18.0<br>
-Remaining years of reserve material at current year pace: 9.4<br>
+Total completed since 01/01/2013: 407 titles - 4455H 55M / 185D 15H 55M<br>
+Total remaining in queue and reserve: 824 titles - 10125H 48M / 421D 21H 48M<br>
+Average completed per year: 46.3 titles - 506H 23M / 21D 2H 23M<br>
+Remaining years of reserve material at average yearly pace: 17.8<br>
+Remaining years of reserve material at current year pace: 9.0<br>
  <br>
-Total time to process all reports: 00:00:01.818 (1.818 seconds)<br>
-Total time including file writes: 00:00:01.818 (1.818 seconds)
+Total time to process all reports: 00:00:01.635 (1.635 seconds)<br>
+Total time including file writes: 00:00:01.635 (1.635 seconds)
 </div>
 </body>
 </html>
